# webcachesim

./: .gitignore  CMakeLists.txt  Makefile  cache.h  lfosim.cpp  lfosim_helper.cpp  lfosim_helper.hpp  request.h  webcachesim.cpp
LightGBM/: lib_lightgbm.dylib
caches/: cache_object.h  gd_variants.cpp  gd_variants.h  lru_variants.cpp  lru_variants.h
caches/LFO/: LFOCache.cpp  LFOCache.h  LFOTrainUtil.cpp  LFOTrainUtil.h  LightGBMHelper.cpp  LightGBMHelper.h  OptimizationGoal.h  lfo-feature.cpp  lfo-feature.h
caches/OPT/: parse_trace.cpp  parse_trace.h
caches/OPT-U/: parse_trace.cpp  parse_trace.h
caches/OPTU/: parse_trace.cpp  parse_trace.h
lightgbm_example/: README.md  lightgbm.cpp
results/: README.md  generate_results.sh
